<resources>
    <string name="empty"> </string>
    <string name="app_name">药品盒子</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title" >药品盒子</string>
    <string name="navigation_QR_code">扫一扫</string>
    <string name="navigation_history">历史</string>
    <string name="navigation_search">查询</string>
    <string name="navigation_help">提问</string>
    <string name="navigation_feedback">反馈</string>
    <string name="navigation_setting">设置</string>
    <string name="more">更多</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="navigation_home">首页</string>
    <string name="navigation_find">发现</string>
    <string name="title_security">安全信息</string>
    <string name="title_product">产品推广</string>
    <string name="title_service">服务信息</string>
    <string name="QRscan">扫一扫</string>
    <string name="jinji">禁忌</string>
    <string name="bulangfangying">不良反应</string>
    <string name="jingshi">警示</string>
    <string name="xianghuzuoyong">相互作用</string>
    <string name="jibingzhuangti">疾病专题</string>
    <string name="jiangkanyangsheng">健康养生</string>
    <string name="yiyaochangshi">医药常识</string>
    <string name="yaojiandongtai">药监动态</string>
    <string name="title_recommend">推荐信息</string>
    <string name="see_doctor">找医生</string>
    <string name="other_service">其他服务</string>
    <string name="account">邮箱</string>
    <string name="password">密码</string>
    <string name="password_ins">确认密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="name">昵称</string>
    <string name="otherway">或以下方式直接登录</string>
    <string name="login_info">点击头像登录</string>
    <string name="me">我</string>
    <string name="yongyaotixing">用药提醒</string>
    <string name="my_message">我的消息</string>
    <string name="my_dianping">我的点评</string>
    <string name="my_favorite">我的收藏</string>
    <string name="year">年龄</string>
    <string name="gender_man">男</string>
    <string name="gender_woman">女</string>
    <string name="detail_info">详细信息</string>
    <string name="sethead">设置头像</string>
    <string name="medicine">药品</string>
    <string name="tips">提示</string>
    <string name="ring_ton">铃声</string>
    <string name="vibrate">振动</string>
    <string name="chooseRingtone">选择铃声</string>
    <string name="chongfu">重复</string>
    <string name="scan">扫一扫</string>
    <string name="openPhoto">图片</string>
    <string name="openLight">灯光</string>
    <string name="scanresult">扫描结果</string>
    <string name="eat">亲!您该吃药了！</string>
    <string name="readed">知道了</string>
    <string name="delete">删除！</string>
    <string name="suredelete">确认删除该用药提醒么？</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="update">修改</string>
    <string name="SignOut">注销登录</string>
    <string name="LoginOut">注销登录？</string>
    <string name="loginging">登录...</string>
    <string name="save_info">保存</string>
    <string name="uploading">上传中...</string>
    <string name="sure_exit">再按一次退出</string>
    <string name="no_network">加载失败！点击重试</string>
    <string name="hint">请输入药品名称</string>
    <string name="menu.clear">清除</string>
    <string name="menu.toggle.icon">箭头</string>
    <string name="menu.icon.type">类型</string>
    <string name="help">帮助</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="addhelp">添加问题</string>
    <string name="medicinename">药品名称:</string>
    <string name="select">选择</string>
    <string name="addRemind">添加提醒</string>
    <string name="add">添加</string>
    <string name="search">输入药品名字</string>
    <string name="searchmedicine">搜索药品</string>
    <string name="noResult">无结果!</string>
    <string name="lackPermission">缺少权限！</string>
    <string name="lackPermission_message">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="selectimage">选择图片</string>
    <string name="folder_all">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">无相机</string>
    <string name="msg_amount_limit">你最多只能选9张图片</string>
    <string name="tip_take_photo">拍照</string>
    <string name="photo_unit">Shot</string>
    <string name="action_done">完成</string>
    <string name="topic">标题:</string>
    <string name="yourQuestion">你的问题是？</string>
    <string name="sending">发送中...</string>
    <string name="detail">详情</string>
</resources>
