<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/LoginLin"
    android:layout_height="match_parent">
<include
    layout="@layout/toolbar_normal"/>
    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/myEditTheme"
            >
            <EditText
                android:id="@+id/my_account"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/myEditTheme"
            >
            <EditText
                android:id="@+id/my_password"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_regist"
            android:background="@drawable/button_regist"
            android:text="@string/regist"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />
        <Button
        android:id="@+id/button_login"
        android:background="@drawable/button_login"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginLeft="60dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginTop="50dp"
        android:background="@color/colorgray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/otherway"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/img_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="5dp"
            android:src="@drawable/img_weichat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginLeft="5dp"
            android:src="@drawable/img_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>