<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/SignUpLin"
    android:layout_height="match_parent">
<include
    layout="@layout/toolbar_normal"/>
    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:theme="@style/myEditTheme"
            >
            <EditText
                android:id="@+id/my_account"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/myEditTheme"
            >
            <EditText

                android:id="@+id/my_name"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/myEditTheme"
            >
            <EditText

                android:id="@+id/my_password"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/myEditTheme"
            >
            <EditText
                android:id="@+id/my_password_ins"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_ins"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>