<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_marginTop="10dp"
    android:layout_height="match_parent">
<RelativeLayout
    android:padding="10dp"
    android:clickable="true"
    android:id="@+id/goto_remind"
    android:background="@drawable/onpress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/img_mytixing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView" />
    <TextView
        android:text="@string/yongyaotixing"
        android:textColor="@color/colorblack"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginStart="15dp" />
    <ImageView
        android:src="@drawable/img_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>
    <View
        android:background="@color/colorgray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:clickable="true"
        android:background="@drawable/onpress"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/img_mymessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView1" />
        <TextView
            android:text="@string/my_message"
            android:textColor="@color/colorblack"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView1"
            android:layout_marginStart="15dp" />
        <ImageView
            android:src="@drawable/img_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <View
        android:background="@color/colorgray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:clickable="true"
        android:background="@drawable/onpress"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/img_dianping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2" />
        <TextView
            android:text="@string/my_dianping"
            android:textColor="@color/colorblack"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_marginStart="15dp" />
        <ImageView
            android:src="@drawable/img_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
             />
    </RelativeLayout>
    <View
        android:background="@color/colorgray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:clickable="true"
        android:background="@drawable/onpress"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/img_myfavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3" />
        <TextView
            android:text="@string/my_favorite"
            android:textColor="@color/colorblack"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_marginStart="15dp" />
        <ImageView
            android:src="@drawable/img_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <View
        android:background="@color/colorgray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</LinearLayout>